--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.3",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.16.2",
