--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.3",
+    "bcryptjs": "^3.0.3",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.2",
     "sequelize": "^6.37.7"
   }
